[package]
name = "meetup-trie"
version = "0.1.0"
authors = ["cheme <emericchevalier.pro@gmail.com>"]
edition = "2018"

[dependencies]
trie-db = "0.9.1"
hash-db = "0.9.0"
keccak-hasher = "0.2.1"
parity-codec = "3.0"
memory-db = "0.9"
substrate-trie = { git = "https://github.com/paritytech/substrate" }
kvdb = "0.1"
kvdb-rocksdb = "0.1.4"
rkv = "0.7.0"

